CSSValue: reorder ClassType enum to allow faster comparisons, add COMPILE_ASSERT on class size. https://bugs.webkit.org/show_bug.cgi?id=72924

Reviewed by Andreas Kling.

Note that the change from unsigned to unsigned char is to improve bit packing when using MSVC.

Covered by existing CSS tests.

* css/CSSValue.h:
(WebCore::CSSValue::isPrimitiveValue):
(WebCore::CSSValue::isValueList):
(WebCore::CSSValue::isImageGeneratorValue):
(WebCore::CSSValue::isTimingFunctionValue):
(WebCore::CSSValue::CSSValue):


Canonical link: https://commits.webkit.org/89601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101119 268f45cc-cd09-0410-ab3c-d52691b4dbfc